Refactors API endpoints to include versioning
Updates the API endpoints to include versioning for better organization and maintainability.
This change ensures that all API routes are prefixed with `/api/v1/`, providing a clear structure for future API updates and compatibility.
Also includes the addition of DELETE requests for ambiente, genetica and meios-cultivos.
